src/objects/SNI_FL_Notification_Center_API_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Email_API_URL__c</fullName>
        <label>Email API URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email_From_Address__c</fullName>
        <label>Email From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Email__c</fullName>
        <label>Email Notification Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Subject__c</fullName>
        <label>Email Notification Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_TemplateID__c</fullName>
        <label>Email TemplateID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Attribute_Name__c</fullName>
        <label>Email Template Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_API_URL__c</fullName>
        <label>SMS API URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMS_Client_ID__c</fullName>
        <label>SMS Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Client_Secret__c</fullName>
        <label>SMS Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_GroupId__c</fullName>
        <label>SMS GroupId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Notification_Text__c</fullName>
        <label>SMS Notification Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_ProgramID__c</fullName>
        <label>SMS ProgramID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Status_Code__c</fullName>
        <label>SMS Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SNI FL Notification Center API Settings</label>
    <pluralLabel>SNI FL Notification Center API Settings</pluralLabel>
</CustomObject>